# AUV-Simulator-Gazebo

./: README.md
sim_gazebo/: CMakeLists.txt  package.xml
sim_gazebo/launch/: sauvc.launch
sim_gazebo/src/: auv_plugin.cpp  buoyancy_fake.cpp  buoyancy_plugin.cpp  data_publisher.cpp
sim_gazebo/worlds/: sauvc.world
simgazebo_image_recieve/: CMakeLists.txt  package.xml
simgazebo_image_recieve/src/: simgazebo_image_recieve.cpp
